# dixa-mcp-public

./: .gitignore  DOCUMENTATION.md  README.md  WARP.md  dixa_api.py  pyproject.toml  server.py
dixa_api/: __init__.py  agents.py  analytics.py  client.py  conversations.py  custom_attributes.py  knowledge.py  organization.py  queues.py  settings.py  tags.py  teams.py  users.py
tools/: README.md  __init__.py  base.py  shared.py
tools/agents/: __init__.py  add_agent.py  fetch_agent_by_id.py  list_agent_teams.py  list_agents.py  list_agents_presence.py  modify_agent_partial.py  set_agent_working_channel.py  update_agent_full.py
tools/analytics/: __init__.py  fetch_aggregated_data.py  fetch_analytics_metric_data.py  fetch_analytics_record_data.py  fetch_unaggregated_data.py  prepare_analytics_metric_query.py  prepare_analytics_record_query.py
tools/conversations/: __init__.py  add_conversation_note.py  add_conversation_notes_bulk.py  anonymize_conversation.py  anonymize_conversation_message.py  assign_conversation_to_agent.py  close_conversation.py  fetch_conversation_by_id.py  import_conversations.py  link_conversation_to_parent.py  list_conversation_activity_log.py  list_conversation_flows.py  list_conversation_messages.py  list_conversation_notes.py  list_conversation_ratings.py  list_linked_conversations.py  list_organization_activity_log.py  remove_tag_from_conversation.py  reopen_conversation.py  search_conversations.py  set_conversation_followup_status.py  start_conversation.py  tag_conversation.py  tag_conversation_bulk.py
tools/custom_attributes/: __init__.py  fetch_custom_attribute_by_id.py  list_custom_attributes.py  update_conversation_custom_attributes.py  update_end_user_custom_attributes.py
tools/knowledge/: __init__.py  add_knowledge_article.py  add_knowledge_category.py  fetch_knowledge_article_by_id.py  list_knowledge_articles.py  list_knowledge_categories.py  modify_knowledge_article.py  (+1 more)
(+44 files in other folders)
