[project]
name = "dixa-mcp-public"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastmcp",
    "requests",
]

# Note: FastMCP Cloud will use requirements.txt if present
# This pyproject.toml is kept for local development
# If you want to build as a package, uncomment the build-system section
# and configure it properly for your package structure

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
